[package]
name = "axum-usage"
authors = ["Aleksandr Sokolovskii <amsokol+github@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/amsokol/examples.rs/axum-usage"
description = "Attribute macros usage example"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0" }
tokio = { version = "1", features = ["full"] }
