[package]
name = "clap-usage"
authors = ["Aleksandr Sokolovskii <amsokol+github@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/amsokol/examples.rs/clap-usage"
description = "Clap usage example"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
clap = { version = "3", features = ["derive", "suggestions", "color", "cargo"] }
clap_lex = "0"
csv = "1"
shell-words = "1"
shlex = "1"
